[package]
name = "Rust"
version = "0.1.0"
authors = ["philiagbo <31472945+philiagbo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand= "*"
device_query = "*"
glium = "*"
glium_shapes = "*"